fix yasb autohide, remove komorebi window gaps

--- a/windows/yasb/styles.css
+++ b/windows/yasb/styles.css
@@ -29,7 +29,7 @@ For more information about configuration options, please visit the Wiki https://
 
 /* 1. Make the main bar transparent so we can see gaps between widgets */
 .yasb-bar {
-  background-color: transparent;
+	background-color: rgba(0, 0, 0, 0.01);
   border: none;
 }
 
